--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <h1>Redirect Button Example</h1>
 
-  <button onclick="redirectToURL()" id="myButton">Click Me to Redirect</button>
+  <button onclick="redirectToURL()" id="myButton">Click Me to Redirect 1</button>
 
   <script>
     function redirectToURL() {
