--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
   <h1>Redirect Button Example</h1>
 
   <button onclick="redirectToURL()" id="myButton">Click Me to Redirect 1</button>
+  <button type="button" class="pay-button" id="deposit-btn" onclick="validateForm()">Check </button>
 
   <script>
 
-    
+    function validateForm() {
+      console.log('flag 1');
+      window.flutter_inappwebview.callHandler('bank3d-ready', {response: true});
+      console.log('flag 2');
+    }
     function redirectToURL() {
       // Replace 'https://example.com' with the URL you want to redirect to
      
