--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
   <button onclick="redirectToURL()" id="myButton">Click Me to Redirect 1</button>
   <button type="button" class="pay-button" id="deposit-btn" onclick="validateForm()">Check </button>
+  
+  <button type="button" id="tmp1" onclick="storeData()">Save</button>
 
   <script>
 
@@ -20,6 +22,11 @@
       console.log('flag 1');
       window.flutter_inappwebview.callHandler('bank3d-ready', {response: true});
       console.log('flag 2');
+    }
+    function storeData() {
+      console.log('storeData: flag 1');
+      window.flutter_inappwebview.callHandler('store_user_token', {response: 'uniue id'});
+      console.log('storeData: flag 2');
     }
     function redirectToURL() {
       // Replace 'https://example.com' with the URL you want to redirect to
