--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <button type="button" id="tmp1" onclick="storeData()">Save</button>
 
   
-  <button onclick="redirectToURL1()" id="myButton1">Redirect </button>
+  <button onclick="redirectToURL1()" id="myButton1">Redirect 1</button>
+  <button onclick="redirectToURL2()" id="myButton1">Redirect 2</button>
 
   <script>
 
@@ -43,6 +44,10 @@
 
     function redirectToURL1() {
       window.location.href = 'https://psoptestapp1.000webhostapp.com/user/mobile/authentication?authToken=eyk';
+     }
+
+    function redirectToURL2() {
+      window.location.href = 'https://psreit.propertyshare.in/user';
      }
 
 
