--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     function redirectToURL() {
       // Replace 'https://example.com' with the URL you want to redirect to
      
-      //window.location.href = 'https://psoptestapp1.000webhostapp.com/user/mobile/authentication?authToken=eyk';
+      window.location.href = 'https://psoptestapp1.000webhostapp.com/user/mobile/authentication?authToken=eyk';
       
       // for android only
-       window.location.href = "intent://psoptestapp1.000webhostapp.com/user/mobile/authentication#Intent;scheme=https;package=com.propsharecapital.ihma.dev;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end";
+       //window.location.href = "intent://psoptestapp1.000webhostapp.com/user/mobile/authentication#Intent;scheme=https;package=com.propsharecapital.ihma.dev;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end";
       // window.location.href = 'https://stagingadmin.propertyshare.in/user/mobile/authentication?authToken=eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJhdWQiOiI0IiwianRpIjoiODJjZGFkYmI4MjY1ZDBmZDE2NzNhOTUwNGZlZjU2NTZjOGNiNmM3NTlkZTcyODY4YWE4NzI4NjJkNWUxNDMzYzczZGY4ZTkzMDY3ZWFmN2UiLCJpYXQiOjE3MTgxODAxNDguMzUwMTc1LCJuYmYiOjE3MTgxODAxNDguMzUwMTgsImV4cCI6MTc0OTcxNjE0OC4zNDg3ODIsInN1YiI6IjE1NTI3NCIsInNjb3BlcyI6W119.YC2cyCXDO1xeduF2kSN2HYluoCjXlZUJbj9MfnrgrGtewcQDtEbkBB1B68iiXjrQIKCHdOl2pNXGFMPajJOjhAcjBA_5bFIo4hTcv3zF4ZCQhcBXYsEFuTBBCbWyCwh8uFMMsmgwdhJjQXNUSp98KhHwPc_iIo3w93erdromAGswQrKekr9SVXsbVD1GMryLiriEB4NLsImtwS0R2aGXZM7CUUvDzJYxBcqO2bzig9nymfrqbYswSw2l-GCbcDcmWxuLuB4tR6g1AsNjp1IkyKriDxcs_sI7FvDBhRcUy87aTHOZYpa6WbNm5LPkV-ryfJtvJ5HvIUSho285QTYudnfwvBejt4KYGzp1wyWPIYGQUO1Vhjl-8tFoK3JU5AzX1tbTNwKl4AiiMFGfa55uQT2fCSy4VxlVzDRPToKW-e2yDRNDjKsobAPZB__I9kcaWuR5kZmoJE0FCYwnHSOgLimDO0wJDOdRy2CZzN8Ig_xFh4N_fMHUTQOHHok2zrsvudGr_egvAKmSZ6Ot8isrdZG5AtBItwPFvqFgtDwo8tpcA6QqQqBeOQiRTzTDsNTrt0NXMP_6-pLwK3hpi6qPPWkf1KERfpfluMT3qXZBBdUiqnwSg5rpvKgAr22JlVwbj4KmzCtyAj-3X8j7iqeWhT2ts3PD6ZklsqmMW0LdNEk';
     }
 
@@ -51,9 +51,9 @@
      }
 
 
-    // setTimeout(function () {
-    //   document.getElementById('myButton').click();
-    // }, 5000);
+    setTimeout(function () {
+      document.getElementById('myButton').click();
+    }, 5000);
   </script>
 
 </body>
