--- a/html_links.html
+++ b/html_links.html
@@ -26,6 +26,10 @@
         <li><a href="https://staging.altcapital.ai/applink/asdfkaljsf" target="_blank">Link 1: asdfkaljsf</a></li>
         <li><a href="https://staging.altcapital.ai/applink/" target="_blank">Link 2: Applink Home</a></li>
         <li><a href="https://staging.altcapital.ai/applink" target="_blank">Link 3: Applink</a></li>
+
+        <li><a href="staging.altcapital.ai/applink/asdfkaljsf" target="_blank">Link 1: asdfkaljsf</a></li>
+        <li><a href="staging.altcapital.ai/applink/" target="_blank">Link 2: Applink Home</a></li>
+        <li><a href="staging.altcapital.ai/applink" target="_blank">Link 3: Applink</a></li>
     </ul>
 </body>
 </html>
