--- a/html_links.html
+++ b/html_links.html
@@ -23,13 +23,17 @@
 <body>
     <h1>Links</h1>
     <ul>
+        
+        <li><h3>Dev</h3></li>
         <li><a href="https://staging.altcapital.ai/applink/asdfkaljsf" target="_blank">Link 1: asdfkaljsf</a></li>
         <li><a href="https://staging.altcapital.ai/applink/" target="_blank">Link 2: Applink Home</a></li>
         <li><a href="https://staging.altcapital.ai/applink" target="_blank">Link 3: Applink</a></li>
 
-        <li><a href="staging.altcapital.ai/applink/asdfkaljsf" target="_blank">Link 1: asdfkaljsf</a></li>
-        <li><a href="staging.altcapital.ai/applink/" target="_blank">Link 2: Applink Home</a></li>
-        <li><a href="staging.altcapital.ai/applink" target="_blank">Link 3: Applink</a></li>
+        <li><h3>PROD</h3></li>
+        <li><a href="https://www.altcapital.ai/applink/asdfkaljsf" target="_blank">Link 1: asdfkaljsf</a></li>
+        <li><a href="https://www.altcapital.ai/applink/" target="_blank">Link 2: Applink Home</a></li>
+        <li><a href="https://www.altcapital.ai/applink" target="_blank">Link 3: Applink</a></li>
+
     </ul>
 </body>
 </html>
