--- a/html_links.html
+++ b/html_links.html
@@ -28,6 +28,10 @@
         <li><a href="https://staging.altcapital.ai/applink/asdfkaljsf" target="_blank">Link 1: asdfkaljsf</a></li>
         <li><a href="https://staging.altcapital.ai/applink/" target="_blank">Link 2: Applink Home</a></li>
         <li><a href="https://staging.altcapital.ai/applink" target="_blank">Link 3: Applink</a></li>
+        <hr>
+        <li><a href="https://propsharecapital.com/applink/asdfkaljsf" target="_blank">Link 1: old</a></li>
+        <li><a href="https://propsharecapital.com/applink/" target="_blank">Link 2: old</a></li>
+        <li><a href="https://propsharecapital.com/applink" target="_blank">Link 3: old</a></li>
 
         <li><h3>PROD</h3></li>
         <li><a href="https://www.altcapital.ai/applink/asdfkaljsf" target="_blank">Link 1: asdfkaljsf</a></li>
